syntax = "proto3";

package api.cms;

import "api/cms/api.proto";
import "google/api/annotations.proto";

option go_package = "edu/api/cms;cms";
option java_multiple_files = true;
option java_package = "api.cms";

service Admin {
    rpc ListHelp (ListHelpRequest) returns (ApiReply) {
        option (google.api.http) = {
            get: "/admin/v1/cmshelpList"
        };
    };
    rpc GetHelp (GetHelpRequest) returns (ApiReply) {
        option (google.api.http) = {
            get: "/admin/v1/cmshelp/{helpId}"
        };
    };
    rpc CreateHelp (Help) returns (ApiReply) {
        option (google.api.http) = {
            post: "/admin/v1/cmshelp"
        };
    };
    rpc UpdateHelp (Help) returns (ApiReply){
        option (google.api.http) = {
            put: "/admin/v1/cmshelp"
        };
    };
    rpc DeleteHelp (DeleteHelpRequest) returns (ApiReply) {
        option (google.api.http) = {
            delete: "/admin/v1/cmshelp/{ids}"
        };
    };
    rpc ListHelpCategory (ListHelpCategoryRequest) returns (ApiReply) {
        option (google.api.http) = {
            get: "/admin/v1/cmshelpcategoryList"
        };
    };
    rpc GetHelpCategory (GetHelpCategoryRequest) returns (ApiReply) {
        option (google.api.http) = {
            get: "/admin/v1/cmshelpcategory/{id}"
        };
    };
    rpc CreateHelpCategory (HelpCategory) returns (ApiReply) {
        option (google.api.http) = {
            post: "/admin/v1/cmshelpcategory"
        };
    };
    rpc UpdateHelpCategory (HelpCategory) returns (ApiReply){
        option (google.api.http) = {
            put: "/admin/v1/cmshelpcategory"
        };
    };
    rpc DeleteHelpCategory (DeleteHelpCategoryRequest) returns (ApiReply) {
        option (google.api.http) = {
            delete: "/admin/v1/cmshelpcategory/{ids}"
        };
    };
    rpc ListSubject (ListSubjectRequest) returns (ApiReply) {
        option (google.api.http) = {
            get: "/admin/v1/cmssubjectList"
        };
    };
    rpc GetSubject (GetSubjectRequest) returns (ApiReply) {
        option (google.api.http) = {
            get: "/admin/v1/cmssubject/{id}"
        };
    };
    rpc CreateSubject (Subject) returns (ApiReply) {
        option (google.api.http) = {
            post: "/admin/v1/cmssubject"
        };
    };
    rpc UpdateSubject (Subject) returns (ApiReply){
        option (google.api.http) = {
            put: "/admin/v1/cmssubject"
        };
    };
    rpc DeleteSubject (DeleteSubjectRequest) returns (ApiReply) {
        option (google.api.http) = {
            delete: "/admin/v1/cmssubject/{ids}"
        };
    };
    rpc ListSubjectCategory (ListSubjectCategoryRequest) returns (ApiReply) {
        option (google.api.http) = {
            get: "/admin/v1/cmssubjectList"
        };
    };
    rpc GetSubjectCategory (GetSubjectCategoryRequest) returns (ApiReply) {
        option (google.api.http) = {
            get: "/admin/v1/cmssubject/{id}"
        };
    };
    rpc CreateSubjectCategory (SubjectCategory) returns (ApiReply) {
        option (google.api.http) = {
            post: "/admin/v1/cmssubject"
        };
    };
    rpc UpdateSubjectCategory (SubjectCategory) returns (ApiReply){
        option (google.api.http) = {
            put: "/admin/v1/cmssubject"
        };
    };
    rpc DeleteSubjectCategory (DeleteSubjectCategoryRequest) returns (ApiReply) {
        option (google.api.http) = {
            delete: "/admin/v1/cmssubject/{ids}"
        };
    };
}

service Api {
    // rpc Ping (.google.protobuf.Empty) returns (.google.protobuf.Empty);
	// rpc SayHello (HelloReq) returns (.google.protobuf.Empty);
	rpc SayHelloURL(HelloReq) returns (HelloResp) {
        option (google.api.http) = {
            get:"/api/v1/cms/say_hello"
        };
    };
    rpc ListHelp (ListHelpRequest) returns (ListHelpReply) {
        option (google.api.http) = {
            get: "/api/v1/cms/helpList"
        };
    };
    rpc GetHelp (GetHelpRequest) returns (GetHelpReply) {
        option (google.api.http) = {
            get: "/api/v1/cms/help/{helpId}"
        };
    };
}

message HelloReq {
	string name = 1;
}

message HelloResp {
    string Content = 1;
}

message ListHelpRequest {
    int32 pageSize = 1;
    int32 pageIndex = 2;
    string configKey = 3;
    string configName = 4;
    string configType = 5;
}
message ListHelpReply {}

message GetHelpRequest {
    uint64 helpId = 1;
}
message GetHelpReply {}

message CreateHelpRequest {}
message CreateHelpReply {}

message UpdateHelpRequest {}
message UpdateHelpReply {}

message DeleteHelpRequest {
    string ids = 1;
}
message DeleteHelpReply {}

message ListHelpCategoryRequest {
    int32 pageSize = 1;
    int32 pageIndex = 2;
    string configKey = 3;
    string configName = 4;
    string configType = 5;
}
message ListHelpCategoryReply {}

message GetHelpCategoryRequest {
    uint64 id = 1;
}
message GetHelpCategoryReply {}

message CreateHelpCategoryRequest {}
message CreateHelpCategoryReply {}

message UpdateHelpCategoryRequest {}
message UpdateHelpCategoryReply {}

message DeleteHelpCategoryRequest {
    string ids = 1;
}
message DeleteHelpCategoryReply {}

message ListSubjectRequest {
    int32 pageSize = 1;
    int32 pageIndex = 2;
    string configKey = 3;
    string configName = 4;
    string configType = 5;
}
message ListSubjectReply {}

message GetSubjectRequest {
    uint64 id = 1;
}
message GetSubjectReply {}

message CreateSubjectRequest {}
message CreateSubjectReply {}

message UpdateSubjectRequest {}
message UpdateSubjectReply {}

message DeleteSubjectRequest {
    string ids = 1;
}
message DeleteSubjectReply {}


message ListSubjectCategoryRequest {
    int32 pageSize = 1;
    int32 pageIndex = 2;
    string configKey = 3;
    string configName = 4;
    string configType = 5;
}
message ListSubjectCategoryReply {}

message GetSubjectCategoryRequest {
    uint64 id = 1;
}
message GetSubjectCategoryReply {}

message CreateSubjectCategoryRequest {}
message CreateSubjectCategoryReply {}

message UpdateSubjectCategoryRequest {}
message UpdateSubjectCategoryReply {}

message DeleteSubjectCategoryRequest {
    string ids = 1;
}
message DeleteSubjectCategoryReply {}