syntax = "proto3";

package api.cms.v1;

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

option go_package = "edu/api/cms/v1;v1";
option java_multiple_files = true;
option java_package = "api.cms.v1";

message ApiReply {
    int32 code = 1;
    string reason = 2;
    string message = 3;
    int32 ttl = 4;
    int32 pageIndex = 5;
    int32 pageSize = 6;
    int32 count = 7; // total
    repeated google.protobuf.Any data = 8;
}

message Help {
    uint64 id = 1;
    uint64 categoryId = 2;
    string icon = 3;
    string title = 4;
    int32 showStatus = 5;
    int32 readCount = 6;
    string content = 7;
    google.protobuf.Timestamp createdAt = 8;
}

message HelpCategory {
    uint64 id = 1;
    string name = 2;
    string icon = 3;
    uint32 helpCount = 4;
    int32 showStatus = 5;
    int32 sort = 6;
    google.protobuf.Timestamp createdAt = 7;
}

message Subject {
    uint64 id = 1;
    uint64 categoryId = 2;
    string title = 3;
    string pic = 4;
    string productCount = 5;
    google.protobuf.Timestamp createdAt = 7;
}

message SubjectCategory {
    uint64 id = 1;
    string name = 2;
    string icon = 3;
    int32 subjectCount = 4;
    int32 showStatus = 5;
    int32 sort = 6;
    google.protobuf.Timestamp createdAt = 8;
}

message SubjectComment {
    uint64 id = 1;
    uint64 subjectId = 2;
    string memberNickname = 3;
    string memberIcon = 4;
    string content = 5;
    int32 showStatus = 6;
    google.protobuf.Timestamp createdAt = 7;
}